--- a/todolist/public/manifest.json
+++ b/todolist/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "short_name": "React App",
+  "short_name": "Todo list SiaSky-Style",
   "name": "Create React App Sample",
   "icons": [
     {
